--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,8 @@ body {
     background-color: #f7f7f7;
 }
 
-
 /*STATS*/
-.task_stats {
+.task-stats {
     width: 240px;
     padding: 10px;
     border: 1px solid var(--purple);
@@ -45,13 +44,13 @@ body {
     top: 0;
 }
 
-.task_stats.visible {
+.task-stats.visible {
     left: 5px;
     transform: translateX(0);
     opacity: 1;
 }
 
-.task_stats p {
+.task-stats p {
     display: flex;
     justify-content: space-between;
     margin: 0;
@@ -59,10 +58,9 @@ body {
     border-bottom: 1px dashed var(--purple);
 }
 
-.task_stats p:last-child {
+.task-stats p:last-child {
     border-bottom: none;
 }
-
 
 /*MODAL*/
 .modal {
@@ -74,14 +72,14 @@ body {
     z-index: 9998;
 }
 
-.modal_cover {
+.modal-overlay {
     background: rgba(37, 37, 37, 0.6);
     position: absolute;
     width: 100%;
     height: 100%;
 }
 
-.modal_main {
+.modal-main {
     margin: auto;
     padding: 18px 30px;
     position: relative;
@@ -92,7 +90,7 @@ body {
     background: var(--white);
 }
 
-.modal_title {
+.modal-title {
     margin: 6px 0 12px 0;
     color: var(--black);
     text-align: center;
@@ -103,7 +101,7 @@ body {
     text-transform: uppercase;
 }
 
-.modal_input {
+.modal-input {
     border: 1px solid var(--purple);
     border-radius: 5px;
     padding: 8px 16px;
@@ -115,67 +113,55 @@ body {
     line-height: 100%;
 }
 
-.modal_input::placeholder {
+.modal-input::placeholder {
     color: #C3C1E5;
 }
 
-.modal_input:focus {
+.modal-input:focus {
     color: var(--purple);
     outline: none;
 }
 
-.modal_cancel {
+.modal-cancel {
     border: 1px solid var(--purple);
     border-radius: 5px;
     padding: 10px 22px;
-    width: 110px;
-    height: 38px;
+    width: 120px;
+    height: 50px;
 
     font-weight: 500;
     color: var(--purple);
     background: var(--white);
 
     position: relative;
-    top: 135px;
-}
+    top: 115px;
 
-.modal_save {
-    border: 1px solid var(--purple);
-    border-radius: 5px;
-    padding: 10px 22px;
-    width: 110px;
-    height: 38px;
-    font-weight: 500;
-    color: var(--white);
-    background: var(--purple);
-    position: relative;
-    top: 135px;
-    left: 51px;
     cursor: pointer;
 }
 
-.modal_save:disabled {
-    background: #ddd;
-    cursor: not-allowed;
-}
-
-
-.modal_apply {
+.modal-apply {
     border: 1px solid var(--purple);
     border-radius: 5px;
     padding: 10px 22px;
-    width: 110px;
-    height: 38px;
+    width: 120px;
+    height: 50px;
 
     font-weight: 500;
     color: var(--white);
     background: var(--purple);
 
     position: relative;
-    top: 135px;
-    left: 107px;
+    top: 115px;
+    left: 195px;
+
+    cursor: pointer;
 }
 
+.modal-apply:disabled {
+    background-color: #ccc;
+    color: #666;
+    cursor: not-allowed;
+}
 
 /*MAIN*/
 header {
@@ -188,30 +174,28 @@ header {
     margin: 40px auto 30px;
 }
 
-.app {
+.todo-list-container {
     max-width: 750px;
     height: 575px;
     margin: 0 auto;
 
     position: relative;
-
-    cursor: url("/img/png/coursor.png"), auto;
 }
-
 
 /*TODO*/
-.todo_content {
+.todo-content {
     max-width: 750px;
-
     display: flex;
-    gap: 16px;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
 }
 
-.todo_new {
+.todo-new {
     border: 1px solid var(--purple);
     border-radius: 5px;
-    padding: 8px 16px;
-    width: 595px;
+    padding: 8px;
+    width: 520px;
     height: 38px;
 
     display: flex;
@@ -219,12 +203,12 @@ header {
     box-shadow: 0 0 4px 0 var(--purple);
 }
 
-.todo_input {
+.todo-input {
     font-family: var(--second-family), sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    width: 90%;
+    width: 96%;
 
     background-color: #f7f7f7;
     color: var(--purple);
@@ -232,54 +216,51 @@ header {
     border: 0;
     padding: 11px 0 11px 16px;
     outline: none;
-    cursor: inherit;
+    cursor: pointer;
 }
 
-.todo_input::placeholder {
+.todo-input::placeholder {
     color: #C3C1E5;
 }
 
-.todo_search {
+.todo-search {
     border: 0;
     background-color: #f7f7f7;
 
-    cursor: inherit;
+    cursor: pointer;
 }
 
-.todo_sort {
-    border-radius: 5px;
-    padding: 10px;
-    width: 125px;
-    height: 38px;
-
-    background: var(--purple);
-    box-shadow: 0 0 4px 0 var(--purple);
-    cursor: inherit;
-}
-
-.todo_sort:hover {
-    background: #534CC2;
-}
-
-.todo_select {
+.todo-select {
     font-family: var(--font-family), sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 100%;
-    background-color: var(--purple);
+    color: #ffffff;
+    cursor: pointer;
 
-    width: 100%;
     border: none;
     outline: none;
-    color: #ffffff;
-    cursor: inherit;
+    border-radius: 5px;
+    padding: 10px 16px;
+    width: 120px;
+    height: 38px;
+
+    background: var(--purple) url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9l6 6 6-6"/></svg>') no-repeat right 10px center;
+    background-size: 12px;
+    box-shadow: 0 0 4px 0 var(--purple);
+
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
 }
 
-.todo_select:hover {
-    background: #534CC2;
+.todo-select:hover {
+    background-color: #534CC2;
+    background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9l6 6 6-6"/></svg>');
+    background-size: 12px;
 }
 
-.todo_theme_button {
+.todo-theme-button {
     width: 38px;
     height: 38px;
     border: none;
@@ -291,17 +272,78 @@ header {
     justify-content: center;
 
     background: var(--purple);
-    cursor: inherit;
+    cursor: pointer;
     box-shadow: 0 0 4px 0 var(--purple);
 }
 
-.todo_theme_button:hover {
+.todo-theme-button:hover {
     background: #534CC2;
 }
 
+/*TOGGLER*/
+.toggle-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.switch {
+    position: relative;
+    width: 45px;
+    height: 25px;
+    display: flex;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.toggle-text {
+    font-size: 10px;
+    font-family: var(--font-family), sans-serif;
+    color: var(--purple);
+    margin-top: 25px;
+    margin-left: 3px;
+}
+
+.toggle {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(108, 99, 255, 0.8);
+    border-radius: 34px;
+    transition: 0.4s;
+    box-shadow: 0 0 4px 0 var(--purple);
+}
+
+.toggle::before {
+    position: absolute;
+    content: "";
+    height: 17px;
+    width: 17px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    border-radius: 50%;
+    transition: 0.4s;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+input:checked + .toggle {
+    background-color: #534CC2;
+}
+
+input:checked + .toggle::before {
+    transform: translateX(18px);
+}
 
 /*TODO CONTAINER*/
-.todo_container {
+.todo-container {
     width: 750px;
     height: 575px;
     padding: 30px 115px;
@@ -312,25 +354,24 @@ header {
     gap: 15px;
 }
 
-.todo_container >.todo_task:not(:last-child) {
+.todo-container >.todo-task:not(:last-child) {
     border-bottom: 1px solid rgba(108, 99, 255, 0.46);
 }
 
-.todo_task {
+.todo-task {
     width: 100%;
     height: 26px;
 
     margin-bottom: 17px;
 
     display: flex;
-    cursor: url("/img/png/coursor.png"), auto;
 }
 
-.empty_board {
+.empty-board {
     display: block;
 }
 
-.img_detective {
+.img-detective {
     position: absolute;
     top: 20%;
     left: 50%;
@@ -344,12 +385,11 @@ header {
     transform: translate(-50%);
 }
 
-.todo_left {
+.todo-left {
     width: 100%;
     font-family: var(--font-family), sans-serif;
     font-size: 20px;
     line-height: 100%;
-    text-transform: uppercase;
     color: var(--black);
 
     display: flex;
@@ -358,7 +398,7 @@ header {
     gap: 10px;
 }
 
-.custom_checkbox {
+.custom-checkbox {
     position: absolute;
     z-index: -1;
     opacity: 0;
@@ -369,7 +409,7 @@ header {
     align-items: center;
     user-select: none;
 }
-.custom_checkbox+label::before {
+.custom-checkbox+label::before {
     content: '';
     display: inline-block;
     width: 1em;
@@ -382,133 +422,78 @@ header {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 50% 50%;
+    cursor: pointer;
 }
 
-.custom_checkbox:checked+label::before {
+.custom-checkbox:checked+label::before {
     border-color: var(--purple);
     background-color: var(--purple);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-
 }
 
-.todo_task.completed .todo_left span {
+.todo-task.completed .todo-left span {
     color: rgba(37, 37, 37, 0.5);
     text-decoration: line-through;
 }
 
-.todo_right {
+.todo-right {
     width: 75px;
     gap: 8px;
     display: flex;
     justify-content: flex-end;
 }
 
-.todo_right_button {
+.todo-right-button {
     border: none;
     background-color: #f7f7f7;
+    cursor: pointer;
 }
 
-
 /*SVG*/
-.todo_right_button img {
+.todo-right-button img {
     filter: invert(20%) sepia(0%) saturate(0%) hue-rotate(200deg) brightness(100%) contrast(90%);
     transition: filter 0.2s ease;
 }
 
-.todo_right_button:hover img {
+.todo-right-button:hover img {
     filter: invert(39%) sepia(42%) saturate(3915%) hue-rotate(239deg) brightness(91%) contrast(102%);
 }
 
-.todo_right_button:active img {
+.todo-right-button:active img {
     filter: invert(25%) sepia(91%) saturate(7465%) hue-rotate(354deg) brightness(90%) contrast(120%);
 }
 
-.todo_add_button {
+.todo-add-button {
     width: 50px;
     height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     background: var(--purple);
     box-shadow: 0 0 4px 0 var(--purple);
     border: none;
-    border-radius: 30px;
 
     position: fixed;
     bottom: 27px;
     right: 15%;
+    pointer-events: auto;
 }
 
-.todo_add_button:hover {
+.todo-add-button:hover {
     background: #534CC2;
 }
 
-
-/*TOGGLER*/
-.toggle_container {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    position: fixed;
-
-    bottom: 40px;
-    left: 1%;
-
-}
-
-.toggle_label {
-    font-size: 14px;
-    color: var(--purple);
-
-    font-family: var(--third-family), sans-serif;
-}
-
-.switch {
-    position: relative;
-    width: 60px;
-    height: 34px;
-    display: inline-block;
-
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.toggle {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(108, 99, 255, 0.4);
-    border-radius: 34px;
-    transition: 0.4s;
-    box-shadow: 0 0 4px 0 var(--purple);
-}
-
-.toggle::before {
-    position: absolute;
+.todo-add-button::after {
     content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
-    transition: 0.4s;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    pointer-events: none;
 }
-
-input:checked + .toggle {
-    background-color: var(--purple);
-}
-
-input:checked + .toggle::before {
-    transform: translateX(26px);
-}
-
 
 /*CLOCK*/
 .clock {
@@ -525,7 +510,7 @@ input:checked + .toggle::before {
 }
 
 /*WARNING*/
-.modal_warning {
+.modal-warning {
     display: none;
     position: fixed;
     top: 0;
@@ -538,7 +523,7 @@ input:checked + .toggle::before {
     z-index: 9999;
 }
 
-.modal_warning_content {
+.modal-warning-content {
     background: var(--white);
     opacity: 0.8;
     padding: 20px;
@@ -552,68 +537,101 @@ input:checked + .toggle::before {
     line-height: 1;
 }
 
+.modal-warning button {
+    font-family: inherit;
+    font-size: 14px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
 
+.cancel-delete, .delete-all-cancel {
+    background-color: var(--purple);
+    color: #fff;
+    border: none;
 
-/*THEME*/
+    position: relative;
+    top: 10px;
+    right: -80px;
+}
+
+.cancel-delete:hover, .delete-all-cancel:hover {
+    background-color: #534CC2;
+}
+
+.confirm-delete, .delete-all-confirm {
+    background-color: #f44336;
+    color: #fff;
+    border: none;
+
+    position: relative;
+    top: 10px;
+    left: -80px;
+}
+
+.confirm-delete:hover, .delete-all-confirm:hover {
+    background-color: #e53935;
+}
+
+/*DARK THEME*/
 body.dark-theme {
     background-color: #252525;
     color: var(--white);
 }
 
-body.dark-theme .task_stats {
+body.dark-theme .task-stats {
     background-color: var(--black);
 }
-body.dark-theme .todo_input {
+body.dark-theme .todo-input {
     background-color: #252525;
     color: var(--white);
 }
 
-body.dark-theme .todo_new {
+body.dark-theme .todo-new {
     border-color: var(--purple);
     background-color: #252525;
 }
 
-body.dark-theme .todo_left {
+body.dark-theme .todo-left {
     color: var(--white);
 }
 
-body.dark-theme .todo_search {
+body.dark-theme .todo-search {
     background-color: var(--black);
 }
 
-body.dark-theme .todo_right_button {
+body.dark-theme .todo-right-button {
     background-color: var(--black);
 }
 
-body.dark-theme .todo_task.completed .todo_left span {
+body.dark-theme .todo-task.completed .todo-left span {
     color: rgb(255, 255, 255, 0.4);
     text-decoration: line-through;
 }
 
-body.dark-theme .modal_main {
+body.dark-theme .modal-title {
+    color: var(--white);
+}
+
+body.dark-theme .modal-main {
     background: var(--black);
     border: 1px solid var(--white);
 }
 
-body.dark-theme .modal_input {
+body.dark-theme .modal-input {
     background-color: var(--black);
     color: var(--white);
     border: 1px solid var(--white)
 }
 
-body.dark-theme .modal_input::placeholder {
+body.dark-theme .modal-input::placeholder {
     color: #C3C1E5;
 }
 
-body.dark-theme .modal_cancel {
+body.dark-theme .modal-cancel {
     background: var(--black);
     color: var(--purple);
-    border: 1px solid var(--white)
-}
-
-body.dark-theme .modal_save {
-    background: rgba(77, 77, 77, 0.55);
-    color: var(--white);
     border: 1px solid var(--white)
 }
 
@@ -621,7 +639,7 @@ body.dark-theme header {
     color: var(--white);
 }
 
-body.dark-theme .modal_warning_content {
+body.dark-theme .modal-warning-content {
     background: var(--black);
     opacity: 0.8;
 
@@ -629,5 +647,3 @@ body.dark-theme .modal_warning_content {
 
     color: var(--white);
 }
-
-
